# Rail

./: CMakeLists.txt  line_description.txt  line_description_1.txt  output_example.txt  readme.txt  timetables.txt  timetables_1.txt  timetables_2.txt  timetables_3.txt
include/: LineaFerroviaria.h  Stazione.h  Treno.h
src/: LineaFerroviaria.cpp  Stazione.cpp  Treno.cpp  main.cpp
